// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HorizontalAutoScroller /> should match the snapshot for 8 items 1`] = `
<div
  class="reset_block__6swfds3"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gv Stack_child_default__1hhisnca Stack_child_spaces_5__1hhisnc4"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg useBoxStyles_overflow_hidden__7o6k06fk"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_absolute__7o6k06fe useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 HorizontalAutoScroller_controllerBtn__jv39ij0 HorizontalAutoScroller_prevBtn__jv39ij2"
      >
        <button
          class="reset_appearance__6swfds0 reset_cursorPointer__6swfds1 reset_trimmedBlockElement__6swfds5 reset_button__6swfds6 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061g useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_overflow_hidden__7o6k06fk useBoxStyles_textAlign_center__7o6k06fi useBoxStyles_border_style__7o6k069k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06b9 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_white__w6to7ig useTextStyles_fontWeight_semiBold__w6to7ip useTextStyles_sizes_4__w6to7i4 Button_root__11v3fwx0 Button_defaultStates_secondary__11v3fwxm Button_variant_secondary__11v3fwxf Button_size_medium_default__11v3fwxa Button_size_medium_rounded__11v3fwxb Button_size_medium_iconOnly__11v3fwxc Button_enabled__11v3fwx4"
          type="button"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_height_full__7o6k06fd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc Button_body__11v3fwx1"
          >
            <i
              class="useBoxStyles_display_block__7o6k06fp Icon_makeResponsiveStyle_key_bp__14sz1q64"
              role="presentation"
            >
              <svg
                class="useBoxStyles_display_block__7o6k06fp useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </i>
          </div>
        </button>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_overflow_hidden__7o6k06fk useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxqg useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y4g Columns_align_stretch__wkgcjh2b Columns_wrapping_noWrap__wkgcjh29"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd HorizontalAutoScroller_controllerCol__jv39ij1"
          >
            <span />
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4 HorizontalAutoScroller_active__jv39ij5"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd HorizontalAutoScroller_controllerCol__jv39ij1"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_absolute__7o6k06fe useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hg HorizontalAutoScroller_controllerBtn__jv39ij0 HorizontalAutoScroller_nextBtn__jv39ij3"
      >
        <button
          class="reset_appearance__6swfds0 reset_cursorPointer__6swfds1 reset_trimmedBlockElement__6swfds5 reset_button__6swfds6 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061g useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_overflow_hidden__7o6k06fk useBoxStyles_textAlign_center__7o6k06fi useBoxStyles_border_style__7o6k069k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06b9 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_white__w6to7ig useTextStyles_fontWeight_semiBold__w6to7ip useTextStyles_sizes_4__w6to7i4 Button_root__11v3fwx0 Button_defaultStates_secondary__11v3fwxm Button_variant_secondary__11v3fwxf Button_size_medium_default__11v3fwxa Button_size_medium_rounded__11v3fwxb Button_size_medium_iconOnly__11v3fwxc Button_enabled__11v3fwx4"
          type="button"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_height_full__7o6k06fd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc Button_body__11v3fwx1"
          >
            <i
              class="useBoxStyles_display_block__7o6k06fp Icon_makeResponsiveStyle_key_bp__14sz1q64"
              role="presentation"
            >
              <svg
                class="useBoxStyles_display_block__7o6k06fp useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gv Stack_child_default__1hhisnca Stack_child_spaces_5__1hhisnc4"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb Section_root__15167c40 Section_width_small__15167c41"
    >
      <div
        class="SliderProgress_root__29afw90"
        style="grid-template-columns: repeat(8, 1fr);"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3 ProgressStep_active__1sg9vym4 ProgressStep_paused__1sg9vym5"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_primary__7o6k06es ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HorizontalAutoScroller /> should match the snapshot with custom slider colour 1`] = `
<div
  class="reset_block__6swfds3"
>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gv Stack_child_default__1hhisnca Stack_child_spaces_5__1hhisnc4"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg useBoxStyles_overflow_hidden__7o6k06fk"
    >
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_absolute__7o6k06fe useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06h8 HorizontalAutoScroller_controllerBtn__jv39ij0 HorizontalAutoScroller_prevBtn__jv39ij2"
      >
        <button
          class="reset_appearance__6swfds0 reset_cursorPointer__6swfds1 reset_trimmedBlockElement__6swfds5 reset_button__6swfds6 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061g useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_overflow_hidden__7o6k06fk useBoxStyles_textAlign_center__7o6k06fi useBoxStyles_border_style__7o6k069k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06b9 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_white__w6to7ig useTextStyles_fontWeight_semiBold__w6to7ip useTextStyles_sizes_4__w6to7i4 Button_root__11v3fwx0 Button_defaultStates_secondary__11v3fwxm Button_variant_secondary__11v3fwxf Button_size_medium_default__11v3fwxa Button_size_medium_rounded__11v3fwxb Button_size_medium_iconOnly__11v3fwxc Button_enabled__11v3fwx4"
          type="button"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_height_full__7o6k06fd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc Button_body__11v3fwx1"
          >
            <i
              class="useBoxStyles_display_block__7o6k06fp Icon_makeResponsiveStyle_key_bp__14sz1q64"
              role="presentation"
            >
              <svg
                class="useBoxStyles_display_block__7o6k06fp useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.414 16.584l-4.586-4.586 4.586-4.586-1.415-1.414-6 6 6 6 1.415-1.414z"
                />
              </svg>
            </i>
          </div>
        </button>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_overflow_hidden__7o6k06fk useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gn useNegativeMarginLeft_makeResponsiveStyle_key_bp__18e9yxqg useNegativeMarginTop_makeResponsiveStyle_key_bp__7pu7y4g Columns_align_stretch__wkgcjh2b Columns_wrapping_noWrap__wkgcjh29"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd HorizontalAutoScroller_controllerCol__jv39ij1"
          >
            <span />
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4 HorizontalAutoScroller_active__jv39ij5"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k Column_makeResponsiveStyle_key_bp__2660ru0 Column_align_stretch__2660ru18"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
          >
            <div
              class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb HorizontalAutoScroller_item__jv39ij4"
            >
              <span />
            </div>
          </div>
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_flexGrow_0__7o6k06h3 useBoxStyles_flexShrink_0__7o6k06h5 Columns_makeResponsiveStyle_key_bp__wkgcjhg Columns_makeResponsiveStyle_key_bp__wkgcjh1k"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd HorizontalAutoScroller_controllerCol__jv39ij1"
          >
            <span />
          </div>
        </div>
      </div>
      <div
        class="reset_block__6swfds3 useBoxStyles_display_flex__7o6k06fq useBoxStyles_position_absolute__7o6k06fe useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hg HorizontalAutoScroller_controllerBtn__jv39ij0 HorizontalAutoScroller_nextBtn__jv39ij3"
      >
        <button
          class="reset_appearance__6swfds0 reset_cursorPointer__6swfds1 reset_trimmedBlockElement__6swfds5 reset_button__6swfds6 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0610 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061g useBoxStyles_makeResponsiveStyle_key_bp__7o6k0638 useBoxStyles_makeResponsiveStyle_key_bp__7o6k063o useBoxStyles_display_inlineBlock__7o6k06fu useBoxStyles_overflow_hidden__7o6k06fk useBoxStyles_textAlign_center__7o6k06fi useBoxStyles_border_style__7o6k069k useBoxStyles_makeResponsiveStyle_key_bp__7o6k06b9 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06bp useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c5 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cl useBoxStyles_makeResponsiveStyle_key_bp__7o6k06cx useTextStyles_root__w6to7i0 reset_block__6swfds3 useTextStyles_colours_white__w6to7ig useTextStyles_fontWeight_semiBold__w6to7ip useTextStyles_sizes_4__w6to7i4 Button_root__11v3fwx0 Button_defaultStates_secondary__11v3fwxm Button_variant_secondary__11v3fwxf Button_size_medium_default__11v3fwxa Button_size_medium_rounded__11v3fwxb Button_size_medium_iconOnly__11v3fwxc Button_enabled__11v3fwx4"
          type="button"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_height_full__7o6k06fd useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gf useBoxStyles_makeResponsiveStyle_key_bp__7o6k06hc Button_body__11v3fwx1"
          >
            <i
              class="useBoxStyles_display_block__7o6k06fp Icon_makeResponsiveStyle_key_bp__14sz1q64"
              role="presentation"
            >
              <svg
                class="useBoxStyles_display_block__7o6k06fp useBoxStyles_width_full__7o6k06fb useBoxStyles_height_full__7o6k06fd"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.585 16.584l4.586-4.586-4.586-4.586L10 5.998l6 6-6 6-1.414-1.414z"
                />
              </svg>
            </i>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k06gv Stack_child_default__1hhisnca Stack_child_spaces_5__1hhisnc4"
  >
    <div
      class="reset_block__6swfds3 useBoxStyles_width_full__7o6k06fb Section_root__15167c40 Section_width_small__15167c41"
    >
      <div
        class="SliderProgress_root__29afw90"
        style="grid-template-columns: repeat(4, 1fr);"
      >
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3 ProgressStep_active__1sg9vym4 ProgressStep_paused__1sg9vym5"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
        <div
          class="reset_block__6swfds3 useBoxStyles_position_relative__7o6k06fg SliderProgress_step__29afw91"
        >
          <div
            class="reset_block__6swfds3 useBoxStyles_display_block__7o6k06fp useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_empty__1sg9vym0"
          />
          <div
            class="reset_block__6swfds3 useBoxStyles_display_none__7o6k06fv useBoxStyles_position_absolute__7o6k06fe useBoxStyles_backgroundColours_yellow500__7o6k06ed ProgressStep_item__1sg9vym2 ProgressStep_fill__1sg9vym3"
            style="animation-duration: 10s;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
